--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.0.1",
+    "scrollreveal": "^4.0.5",
     "styled-components": "^4.2.0"
   },
   "scripts": {
