--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bezier-easing": "^2.1.0",
+    "easy-scroll": "^0.6.0",
     "polished": "^3.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
